--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -1,19 +1,25 @@
 <!doctype html>
 <html>
 <head>
-	<title>Amazeriffic</title>
+	<title>Amazeriffic!</title>
 	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
 		<div class="container">
-			<h1>Amazeriffic</h1>
-			<nav>
-				<a href="index.html">Sign Up!</a> |
-				<a href="FAQ.html">FAQ</a> |
-				<a href="#">Support</a>
-			</nav>
+			<div class="blocGauche">
+				<h1>Amazeriffic !</h1>
+			</div>
+			<div class="blocDroit">
+				<nav>
+					<a href="index.html">Sign Up!</a> |
+					<a href="FAQ.html">FAQ</a> |
+					<a href="#">Support</a>
+				</nav>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -38,7 +44,7 @@
 		<div class="container">
 			<div class="contact">
 				<h5>Contact Us</h5>
-				<p>Amazeriffic!</p>
+				<p class = "amaze">Amazeriffic!</p>
 				<p>555 Fittieth Street</p>
 				<p>Asheville, NC 28801</p>
 			</div>
