--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -3,60 +3,63 @@
 <head>
 	<title>Amazeriffic!</title>
 	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>    
 </head>
 <body>
 	<header>
 		<div class="container">
-			<div class="blocGauche">
-				<h1>Amazeriffic !</h1>
-			</div>
-			<div class="blocDroit">
-				<nav>
-					<a href="index.html">Sign Up!</a> |
-					<a href="FAQ.html">FAQ</a> |
-					<a href="#">Support</a>
-				</nav>
-			</div>
+			<h1>Amazeriffic!</h1>
+			<nav>
+				<a href="index.html">Sign Up!</a> |
+				<a href="FAQ.html">FAQ</a> |
+				<a href="#">Support</a>
+			</nav>
 		</div>
 	</header>
 	<main>
 		<div class="container">
-			<h2>Amazeriffic will change your life!</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+			<div class="left">
+				<h2>Amazeriffic will change your life!</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+					eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-			<h3>Here's why you need Amazeriffic</h3>
-			<ul>
-				<li>It fits your lifestyle</li>
-				<li>It's awesome</li>
-				<li>It rocks your world</li>
-			</ul>
-
-			<img src="lightbulb.png" alt="an image of a lightbulb">
-		</div>
-	</main>
-	<footer>
-		<div class="container">
-			<div class="contact">
-				<h5>Contact Us</h5>
-				<p class = "amaze">Amazeriffic!</p>
-				<p>555 Fittieth Street</p>
-				<p>Asheville, NC 28801</p>
+					<h3>Here's why you need Amazeriffic</h3>
+					<ul>
+						<li>It fits your lifestyle</li>
+						<li>It's awesome</li>
+						<li>It rocks your world</li>
+					</ul>
+				</div>
+				<img src="lightbulb.png" alt="an image of a lightbulb" width=20%>
 			</div>
+		</main>
+		<footer>
+			<div class="container">
+				<div class="contact">
+					<h5>Contact Us</h5>
+					<p>Amazeriffic!</p>
+					<p>555 Fiftieth Street</p>
+					<p>Asheville, NC 28801</p>
+				</div>
 
-			<div class="sitemap">
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Support</a></li>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Careers</a></li>
-				</ul>
+				<div class="sitemap">
+					<h5>Sitemap</h5>
+					<ul>
+						<div class="left">
+							<li><a href="#">Home</a></li>
+							<li><a href="#">About Us</a></li>
+							<li><a href="#">Privacy</a></li>
+						</div>
+						<div class="right">
+							<li><a href="#">Support</a></li>
+							<li><a href="#">FAQ</a></li>
+							<li><a href="#">Careers</a></li>
+						</div>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</footer>
-</body>
-</html>
+		</footer>
+	</body>
+	</html>
