Chapter 3 - Style the FAQ Page for Amazeriffic

--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -31,8 +31,11 @@
 						<li>It's awesome</li>
 						<li>It rocks your world</li>
 					</ul>
+					
 				</div>
-				<img src="lightbulb.png" alt="an image of a lightbulb" width=20%>
+				<div class="right">
+					<img src="lightbulb.png" alt="an image of a lightbulb">
+				</div>
 			</div>
 		</main>
 		<footer>
